@startuml
hide circle
skinparam classAttributeIconSize 0

package budgetflow.command {
    abstract class "{abstract}\nCommand" {
        - input: String
        - outputMessage: String
        + Command(String input)
        + execute(List<Income>, ExpenseList): void
    }

    class FilterIncomeByCategoryCommand {
        - {static} logger: Logger
        - {static} COMMAND_PREFIX: String
        + FilterIncomeByCategoryCommand(String input)
        + execute(List<Income>, ExpenseList) throws FinanceException
    }

    FilterIncomeByCategoryCommand --|> "{abstract}\nCommand"
}

package budgetflow.exception {
    class FinanceException
}

package budgetflow.expense {
    class ExpenseList
}

package budgetflow.income {
    class Income {
        + getCategory(): String
        + getAmount(): double
        + getDate(): String
    }
}

package java.util {
    interface List
}

package java.util.logging {
    class Logger
}

' Show "throws", "uses" relationships:
FilterIncomeByCategoryCommand ..> FinanceException : throws
FilterIncomeByCategoryCommand ..> Income : uses
FilterIncomeByCategoryCommand ..> ExpenseList : uses
FilterIncomeByCategoryCommand ..> Logger : uses
@enduml
